Fix minor layout issue on map above crags list.

--- a/src/app/pages/crags/crags.component.scss
+++ b/src/app/pages/crags/crags.component.scss
@@ -10,7 +10,6 @@
   }
 }
 .crag-map-container {
-  margin-bottom: 16px;
   position: relative;
   height: 360px;
   .crag-map {
